--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-torch==2.0.1
+--extra-index-url https://download.pytorch.org/whl/cu121
+torch==2.3.1
 torchvision
 torchaudio
 xformers>=0.0.20
@@ -9,7 +10,7 @@ transformers==4.30.2
 flask
 gradio
 timm
-diffusers==0.20.2
+diffusers
 accelerate
 einops
 sentencepiece
